--- a/platforms/shared/configuration/roles/git_push/tasks/main.yaml
+++ b/platforms/shared/configuration/roles/git_push/tasks/main.yaml
@@ -55,7 +55,7 @@
     fi  
     
     git --git-dir={{ GIT_DIR }}/.git commit -s -m "{{ msg }}" || true
-    git --git-dir={{ GIT_DIR }}/.git push https://{{ gitops.username }}:{{ gitops.password }}@{{ gitops.git_repo }} HEAD:{{ gitops.branch }}
+    git --git-dir={{ GIT_DIR }}/.git push --force https://{{ gitops.username }}:{{ gitops.password }}@{{ gitops.git_repo }} HEAD:{{ gitops.branch }}
   
   register: GIT_OUTPUT
   when: gitops.git_protocol is not defined or gitops.git_protocol == "https"
