[ci skip] Pushing deployment files for namespace, service accounts and clusterrolebinding
Signed-off-by: abdelhaliem1990 <abdelhaliem@viwell-associates.com>

--- a/platforms/shared/configuration/roles/git_push/tasks/main.yaml
+++ b/platforms/shared/configuration/roles/git_push/tasks/main.yaml
@@ -29,7 +29,7 @@
     fi  
     
     git --git-dir={{ GIT_DIR }}/.git commit -s -m "{{ msg }}" || true
-    git --git-dir={{ GIT_DIR }}/.git push {{ gitops.git_url }} HEAD:{{ gitops.branch }}  
+    git --git-dir={{ GIT_DIR }}/.git push --force {{ gitops.git_url }} HEAD:{{ gitops.branch }}  
   register: GIT_OUTPUT_SSH
   when: 
   - gitops.git_protocol is defined 
