--- a/platforms/shared/configuration/site.yaml
+++ b/platforms/shared/configuration/site.yaml
@@ -21,9 +21,9 @@
   when: reset is undefined or reset == 'false'
 
 # Delete the generic network resources from kuberentes 
-- import_playbook: delete-network.yaml
-  when:
-    - reset is defined and reset == 'true'
+#- import_playbook: delete-network.yaml
+#  when:
+#    - reset is defined and reset == 'true'
 
 ############################################
 # Playbook for Hypelerger Fabric Operations
